# dynamixel_arm_description

./: CMakeLists.txt  package.xml
urdf/: arm.urdf  arm.urdf.xacro
