<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_arm_description</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for open_manipulator_p_description.
  </description>
  <maintainer email="emartin@cesi.fr">Erwan MARTIN</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
